# mahjong

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  format.sh  install.cmake
node/: test.js
src/: logger.cpp  logger.h  main.cpp
src/core/: suit.cpp  suit.h  tile.cpp  tile.h  tiles.json  type_info.h
